2010-01-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12507: (Un)Install icon points to wrong extension in Opera (Thanks to Steffen Gebert)

2010-01-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13098: DB list: layout looks weird with thumbnails (Thanks to Steffen Gebert)
	* Fixed bug #13097: File list: Alternating row colors are weird with thumbnails (Thanks to Steffen Gebert)

2010-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12779: Previously selected type of backend login is now stored in a cookie (Thanks to Sebastian Gebhard)

2010-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.9.0

2010-01-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13134: Support of SQL LOCATE function

2010-01-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12341: Image generation broken with PHPs safe_mode activated and GraphicsMagick (Thanks to Marcus Krause, Helmut Hummel and Bernhard Kraft)

2010-01-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13096: Unable to disable thumbnails with thumbnailsByDefault (Thanks to Steffen Gebert)
	* Fixed bug #13118: Toggle empty tree produces JS error (Thanks to Felix Oertel)
	* Fixed bug #12946: t3lib_div::readLLfile use debug output

2010-01-04  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12506: JSMENU does not respect mount point overlays (Thanks to Joerg Wagner)

2010-01-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #13135: Support for CASE WHEN flow control

2010-01-03  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13095: Massuploader: Max file size is shown in KB (Thanks to Steffen Gebert)

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.0.2 to 1.1.0

2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12855: t3lib/class.t3lib_page.php generates invalid queries for DBAL
	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement
